--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 baseurl = "https://example.com/"  # Include trailing slash
 title = "davieitgallery"
+PublishDir = "docs"
 # this example loads the theme as hugo module
 # comment out line below, and uncomment the line after it if you prefer to load the theme normally
 # theme = ["github.com/onweru/newsroom"] # edit this if you'ld rather use a fork of this repo
